update restaurants-service
